--- a/mysite/package.json
+++ b/mysite/package.json
@@ -25,7 +25,13 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.4",
     "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.3",
+    "node-sass-chokidar": "0.0.3",
+    "npm-run-all": "^4.0.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.5.0"
   }
