--- a/mysite/package.json
+++ b/mysite/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack-dev-server",
+    "lint-ts": "tslint -c tslint.json --project tsconfig.json",
     "test": "test"
   },
   "author": "Luyao Hou",
@@ -20,9 +21,11 @@
   "dependencies": {
     "@types/react": "^15.0.30",
     "@types/react-dom": "^15.5.0",
+    "global": "^4.3.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "ts-loader": "^2.2.0",
+    "tslint": "^5.4.3",
     "typescript": "^2.3.4"
   },
   "devDependencies": {
@@ -36,6 +39,7 @@
     "npm-run-all": "^4.0.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "tslint-loader": "^3.5.3",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.5.0"
   }
