--- a/mysite/package.json
+++ b/mysite/package.json
@@ -19,8 +19,10 @@
   "author": "Luyao Hou",
   "license": "ISC",
   "dependencies": {
+    "@types/autobind-decorator": "^1.3.2",
     "@types/react": "^15.0.30",
     "@types/react-dom": "^15.5.0",
+    "autobind-decorator": "^1.4.1",
     "global": "^4.3.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
