--- a/mysite/package.json
+++ b/mysite/package.json
@@ -22,10 +22,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/autobind-decorator": "^1.3.2",
+    "@types/pdf": "^0.0.31",
     "@types/react": "^15.0.30",
     "@types/react-dom": "^15.5.0",
     "autobind-decorator": "^1.4.1",
     "global": "^4.3.2",
+    "pdfjs-dist": "^1.8.492",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "ts-loader": "^2.2.0",
