--- a/mysite/package.json
+++ b/mysite/package.json
@@ -22,7 +22,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/autobind-decorator": "^1.3.2",
-    "@types/pdf": "^0.0.31",
+    "@types/pdfjs-dist": "^0.0.0",
     "@types/react": "^15.0.30",
     "@types/react-dom": "^15.5.0",
     "autobind-decorator": "^1.4.1",
