--- a/mysite/package.json
+++ b/mysite/package.json
@@ -23,11 +23,13 @@
   "dependencies": {
     "@types/autobind-decorator": "^1.3.2",
     "@types/pdfjs-dist": "^0.0.0",
+    "@types/prop-types": "^15.5.1",
     "@types/react": "^15.0.30",
     "@types/react-dom": "^15.5.0",
     "autobind-decorator": "^1.4.1",
     "global": "^4.3.2",
     "pdfjs-dist": "^1.8.492",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "ts-loader": "^2.2.0",
