--- a/mysite/package.json
+++ b/mysite/package.json
@@ -26,12 +26,14 @@
     "@types/prop-types": "^15.5.1",
     "@types/react": "^15.0.30",
     "@types/react-dom": "^15.5.0",
+    "@types/react-router": "^4.0.12",
     "autobind-decorator": "^1.4.1",
     "global": "^4.3.2",
     "pdfjs-dist": "^1.8.492",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router": "^4.1.1",
     "ts-loader": "^2.2.0",
     "tslint": "^5.4.3",
     "typescript": "^2.3.4"
