--- a/mysite/package.json
+++ b/mysite/package.json
@@ -29,6 +29,7 @@
     "@types/react-router": "^4.0.12",
     "autobind-decorator": "^1.4.1",
     "global": "^4.3.2",
+    "jquery": "^3.2.1",
     "pdfjs-dist": "^1.8.492",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
@@ -39,6 +40,7 @@
     "typescript": "^2.3.4"
   },
   "devDependencies": {
+    "@types/jquery": "^3.2.6",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
     "babel-preset-react": "^6.24.1",
